Add Resource API

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -2,3 +2,8 @@
 <div style="text-align:center">
     <button type="button" (click)="login()">Login</button>
 </div>
+
+<a routerLink="/home">Home</a>
+<a routerLink="/resource">Resource</a>
+
+<router-outlet></router-outlet>
