--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
     <button type="button" (click)="login()">Login</button>
+    <button type="button" (click)="logout()">Logout</button>
 </div>
 
 <a routerLink="/home">Home</a>
