--- a/server/public/styles/app.css
+++ b/server/public/styles/app.css
@@ -35,7 +35,9 @@ body {
     border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-    margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+.form-signin .checkbox {
+    margin-top: 10px;
 }
