--- a/angular-client/src/app/home/home.component.html
+++ b/angular-client/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<p>
-  home works!
-</p>
+<div class="home-card-container">
+
+    <mat-card>
+        <img mat-card-image src="/assets/images/angular-php.png">
+        <mat-card-title>Angular OIDC PHP</mat-card-title>
+        <mat-card-subtitle>Angular & PHP CodeIgniter server through OAuth 2.0 OpenID Connect.</mat-card-subtitle>
+        <mat-card-content>
+            <p>The OAuth 2.0 OpenID Connect implicit flow is implemented using angular-auth-oidc-client and OAuth 2.0 Server
+                PHP. CodeIgniter Ion Auth 2 is used as authentication system.
+            </p>
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <a mat-raised-button href="https://github.com/robisim74/angular-openid-connect-php">Github</a>
+        </mat-card-actions>
+    </mat-card>
+
+</div>
