--- a/angular-client/src/app/resource/resource.component.html
+++ b/angular-client/src/app/resource/resource.component.html
@@ -1,6 +1,12 @@
-<p>
-  resource works!
-</p>
+<h1>API Resource</h1>
 
-<p>result</p>
-{{ results | json }}
+<div class="resource-card-container">
+
+    <mat-card>
+        <mat-card-content>
+            <p>result</p>
+            {{ results | json }}
+        </mat-card-content>
+    </mat-card>
+
+</div>
