--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,10 +1,32 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-    <button type="button" (click)="login()">Login</button>
-    <button type="button" (click)="logout()">Logout</button>
-</div>
+<mat-sidenav-container class="app-root" fullscreen>
 
-<a routerLink="/home">Home</a>
-<a routerLink="/resource">Resource</a>
+    <mat-sidenav #start mode="over">
+        <mat-nav-list>
+            <a *ngFor="let navItem of navItems" mat-list-item routerLinkActive="active-link" (click)="start.close()" [routerLink]="[navItem.route]">
+                {{ navItem.name }}
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
 
-<router-outlet></router-outlet>
+    <div>
+        <mat-toolbar color="primary" class="mat-elevation-z6">
+            <button mat-icon-button (click)="start.open()">
+                <mat-icon>menu</mat-icon>
+            </button>
+            <div class="app-toolbar">
+                <h1>{{ title.getTitle() }}</h1>
+            </div>
+            <mat-toolbar-row>
+                <span class="fill-remaining-space"></span>
+                <button mat-raised-button color="accent" (click)="login()" *ngIf="!isAuthorized">Sign in</button>
+                <span *ngIf="!!userData">{{ userData['email'] }}&nbsp;&nbsp;</span>
+                <button mat-raised-button color="primary" (click)="logout()" *ngIf="isAuthorized">Sign out</button>
+            </mat-toolbar-row>
+        </mat-toolbar>
+
+        <div class="app-content">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+
+</mat-sidenav-container>
