--- a/angular-client/src/app/resource/resource.component.html
+++ b/angular-client/src/app/resource/resource.component.html
@@ -4,8 +4,7 @@
 
     <mat-card>
         <mat-card-content>
-            <p>result</p>
-            {{ results | json }}
+            <canvas id="resourceChart"></canvas>
         </mat-card-content>
     </mat-card>
 
