--- a/angular-client/src/app/home/home.component.scss
+++ b/angular-client/src/app/home/home.component.scss
@@ -15,6 +15,11 @@
         mat-card-subtitle, mat-card-content {
             text-align: center;
         }
+
+        .mat-card-image {
+            padding: 24px;
+            width: 100%;
+        }
     }
 
     img {
