Add Silent renew

--- a/angular-client/src/app/unauthorized/unauthorized.component.html
+++ b/angular-client/src/app/unauthorized/unauthorized.component.html
@@ -1,1 +1,16 @@
-<h1>Unauthorized</h1>
+<div class="unauthorized-card-container">
+
+    <mat-card>
+        <mat-toolbar color="primary">Unauthorized</mat-toolbar>
+        <mat-card-content>
+            <br />
+            <br />
+            <p>You do not have permission to access the resource.</p>
+            <br />
+            <div>
+                <button mat-raised-button color="accent" (click)="login()" class="full-width">Sign in</button>
+            </div>
+        </mat-card-content>
+    </mat-card>
+
+</div>
