--- a/angular-client/src/app/home/home.component.html
+++ b/angular-client/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <mat-card-title>Angular OIDC PHP</mat-card-title>
         <mat-card-subtitle>Angular & PHP CodeIgniter server through OAuth 2.0 OpenID Connect.</mat-card-subtitle>
         <mat-card-content>
-            <p>The OAuth 2.0 OpenID Connect implicit flow is implemented using angular-auth-oidc-client and OAuth 2.0 Server
+            <p>The OAuth 2.0 OpenID Connect implicit flow is implemented using angular-oauth2-oidc and OAuth 2.0 Server
                 PHP. CodeIgniter Ion Auth 2 is used as authentication system.
             </p>
         </mat-card-content>
