--- a/angular-client/src/styles/app.scss
+++ b/angular-client/src/styles/app.scss
@@ -81,7 +81,8 @@ body {
 	}
 }
 
-.unauthorized-card-container {
+.unauthorized-card-container,
+.forbidden-card-container {
     display: flex;
     justify-content: center;
 
