--- a/angular-client/src/app/forbidden/forbidden.component.html
+++ b/angular-client/src/app/forbidden/forbidden.component.html
@@ -1,1 +1,13 @@
-<h1>Forbidden</h1>
+<div class="forbidden-card-container">
+
+    <mat-card>
+        <mat-toolbar color="primary">Forbidden</mat-toolbar>
+        <mat-card-content>
+            <br />
+            <br />
+            <p>Consent denied.</p>
+            <br />
+        </mat-card-content>
+    </mat-card>
+
+</div>
